--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,14 @@ apply plugin: 'jacoco'
 sourceCompatibility = 1.8
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.mockito:mockito-core:2.+"
 }
 
 compileKotlin {
